--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   profiles:
     active: jpa_repository
   datasource:
-    url: jdbc:sqlserver://centrocompartido.engux.com.ar\WIN-646GLNJ8DGA\AXSQLEXPRESS:1550;databaseName=Galias_Gestion
+#    url: jdbc:sqlserver://centrocompartido.engux.com.ar\WIN-646GLNJ8DGA\AXSQLEXPRESS:1550;databaseName=Galias_Gestion
+    url: jdbc:sqlserver://centrocompartido.engux.com.ar\WIN-646GLNJ8DGA\AXSQLEXPRESS:1550;databaseName=Galias_TESTING_MBISURGI
     username: sa
     password: Axoft1988
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
