--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     active: jpa_repository
   datasource:
 #    url: jdbc:sqlserver://centrocompartido.engux.com.ar\WIN-646GLNJ8DGA\AXSQLEXPRESS:1550;databaseName=Galias_Gestion
-#    url: jdbc:sqlserver://centrocompartido.engux.com.ar\WIN-646GLNJ8DGA\AXSQLEXPRESS:1550;databaseName=Galias_TESTING_MBISURGI
-    url: jdbc:sqlserver://\WIN-646GLNJ8DGA\AXSQLEXPRESS;databaseName=Galias_TESTING_MBISURGI
+    url: jdbc:sqlserver://centrocompartido.engux.com.ar\WIN-646GLNJ8DGA\AXSQLEXPRESS:1550;databaseName=Galias_TESTING_MBISURGI
+#    url: jdbc:sqlserver://\WIN-646GLNJ8DGA\AXSQLEXPRESS;databaseName=Galias_TESTING_MBISURGI
     username: sa
     password: Axoft1988
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
