--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<version>6.1.0.jre8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.4.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
