--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.designfreed</groupId>
-	<artifactId>galias-server-backend-dev</artifactId>
+	<artifactId>galias-server-backend</artifactId>
 	<version>1.0.0</version>
 	<packaging>war</packaging>
 
-	<name>galias-server-backend-dev</name>
+	<name>galias-server-backend</name>
 	<description>Backend para acceso a base de datos del ERP Axoft Tango</description>
 
 	<parent>
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<!--<scope>provided</scope>-->
+<!--			<scope>provided</scope>-->
 		</dependency>
 
 		<dependency>
@@ -63,7 +63,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>galias-server-backend-dev</finalName>
+		<finalName>galias-server-backend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
